--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ html {
     --line-color: #e5e7eb;
 }
 
+html.dark {
+    --line-color: rbga(255, 255, 255, 0.2);
+}
+
 .borderBlack {
     @apply border border-black/10;
 }
